--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ BUCKET_REGION = ap-south-1
 
 BREEVO_PASS = K2ONy8SfEmzjn1IL
 BREEVO_ID = 751599001@smtp-brevo.com
+
+# Gmail credentials
+EMAIL_USER= contact@indiadesignershow.com
+EMAIL_PASSWORD= kebjom-nugqyz-3hidGy
