--- a/.env
+++ b/.env
@@ -12,4 +12,6 @@ BREEVO_ID = 751599001@smtp-brevo.com
 
 # Gmail credentials
 EMAIL_USER= contact@indiadesignershow.com
-EMAIL_PASSWORD= kebjom-nugqyz-3hidGy
+EMAIL_PASSWORD= kdaq ulju ysnh gjvc
+#EMAIL_PASSWORD= kebjom-nugqyz-3hidGy
+
